--- a/2. lua语法篇.md
+++ b/2. lua语法篇.md
@@ -125,4 +125,60 @@ end
 print(fn()); -- 100
 ```
 
+函数可以返回多个返回值
+```lua
+-- 多返回值
+local function fn2()
+  return 1, 2;
+end
+
+local a, b = fn2();
+print(a, b); -- 1 2
+```
+
+也可以不限定入参个数
+```lua
+-- 不限定入参的形式
+local function fn4(...)
+  print(...);
+end
+
+fn4(1, 2, 3, 4); -- 1, 2, 3, 4
+```
+
+参数也可以混用
+```lua
+-- ... 关键字与固定入参混用
+local function fn5(a, ...)
+  print(...);
+end
+```
+
 ## 运算符
+ 1. 算术运算符
+ 2. 关系运算符
+ 3. 逻辑运算符
+ 4. 其他运算符
+
+
+### 算术运算符
+![](./resources/lua_num.png)
+
+### 关系运算符
+![](./resources/lua_if.png)
+
+### 逻辑运算符
+`and` 运算符 跟 `or` 运算符并不总是返回true或false
+
+- 当`and`前是`nil` 或 `false` 时会返回 `nil` 或 `false`
+- 当`or`前是`nil` 或 `false` 时会返回 `or` 后的变量结果
+```lua
+print(nil or 100); -- 100
+print(false or 100); -- 100
+print(nil and 100); -- nil
+print(false and 100); -- false
+```
+![](./resources/lua_and.png)
+
+### 其他运算符
+![](./resources/lua_content.png)
